fix：部署，各类文档整理，并发控制
