# docs/swagger.json
@@ -3622,11 +3622,25 @@
         "controllers.CallActionRequest": {
             "type": "object",
             "required": [
-                "call_info"
+                "action",
+                "call_id"
             ],
             "properties": {
-                "call_info": {
-                    "$ref": "#/definitions/controllers.CallInfo"
+                "action": {
+                    "type": "string",
+                    "example": "answered"
+                },
+                "call_id": {
+                    "type": "string",
+                    "example": "mqtt-call-20250510-abcdef123456"
+                },
+                "reason": {
+                    "type": "string",
+                    "example": "user_busy"
+                },
+                "timestamp": {
+                    "type": "integer",
+                    "example": 1651234567890
                 }
             }
         },
@@ -3664,7 +3678,7 @@
                 },
                 "call_id": {
                     "type": "string",
-                    "example": "call-20250510-abcdef123456"
+                    "example": "mqtt-call-20250510-abcdef123456"
                 },
                 "reason": {
                     "type": "string",
@@ -3696,11 +3710,11 @@
             "properties": {
                 "call_id": {
                     "type": "string",
-                    "example": "call-20250510-abcdef123456"
+                    "example": "mqtt-call-20250510-abcdef123456"
                 },
                 "device_id": {
                     "type": "string",
-                    "example": "1"
+                    "example": "5"
                 },
                 "last_activity": {
                     "type": "string",
@@ -3708,7 +3722,7 @@
                 },
                 "resident_id": {
                     "type": "string",
-                    "example": "2"
+                    "example": "6"
                 },
                 "start_time": {
                     "type": "string",
@@ -3998,7 +4012,7 @@
             "properties": {
                 "call_id": {
                     "type": "string",
-                    "example": "call-20250510-abcdef123456"
+                    "example": "mqtt-call-20250510-abcdef123456"
                 },
                 "reason": {
                     "type": "string",
@@ -4075,12 +4089,12 @@
                 "device_id": {
                     "description": "设备ID",
                     "type": "string",
-                    "example": "1"
+                    "example": "5"
                 },
                 "household_number": {
                     "description": "可选，指定户号",
                     "type": "string",
-                    "example": "101"
+                    "example": "MQTT-101"
                 },
                 "timestamp": {
                     "description": "可选时间戳",
@@ -4094,14 +4108,14 @@
             "properties": {
                 "call_id": {
                     "type": "string",
-                    "example": "call-20250510-abcdef123456"
+                    "example": "mqtt-call-20250510-abcdef123456"
                 },
                 "call_info": {
                     "$ref": "#/definitions/controllers.CallInfo"
                 },
-                "device_id": {
+                "device_device_id": {
                     "type": "string",
-                    "example": "1"
+                    "example": "5"
                 },
                 "target_resident_ids": {
                     "type": "array",
@@ -4109,8 +4123,8 @@
                         "type": "string"
                     },
                     "example": [
-                        "[\"2\"",
-                        "\"3\"]"
+                        "[\"6\"",
+                        "\"7\"]"
                     ]
                 },
                 "tencen_rtc": {
@@ -4190,7 +4204,7 @@
                 },
                 "device_id": {
                     "type": "string",
-                    "example": "1"
+                    "example": "5"
                 },
                 "online": {
                     "type": "boolean",
@@ -4264,7 +4278,7 @@
             "properties": {
                 "room_id": {
                     "type": "string",
-                    "example": "call_room_12345"
+                    "example": "room_5_6_1746870072"
                 },
                 "room_id_type": {
                     "type": "string",
@@ -4276,7 +4290,7 @@
                 },
                 "user_id": {
                     "type": "string",
-                    "example": "device_1"
+                    "example": "5"
                 },
                 "user_sig": {
                     "type": "string",
